--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -14,8 +14,12 @@ jobs:
         run: sudo apt-get update && sudo apt-get install texlive texlive-publishers texlive-science latexmk cm-super
       - name: LaTeX compile
         working-directory: ${{ env.DIR }}
-        #run: latexmk -pdf -bibtex ${{ env.FILE }}
-        run: pdflatex ${{ env.FILE }}; bibtex ${{ env.FILE }}; pdflatex ${{ env.FILE }}; pdflatex ${{ env.FILE }};
+        # Use lualatex instead of pdflatex
+        run: |
+          lualatex ${{ env.FILE }}
+          bibtex ${{ env.FILE }}
+          lualatex ${{ env.FILE }}
+          lualatex ${{ env.FILE }}
       - name: move
         run: mkdir -p github_artifacts && mv ${{ env.DIR }}/${{ env.FILE }}.pdf ./github_artifacts/
       - name: Upload pdf as artifact
